# logfile-hotswap

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.old  bazel-runner  build.sh  build_with_docker.sh  launch.sh  pytest.ini  requirements.txt
.docker/: Dockerfile  debug.sh  entrypoint.sh  launch.sh
src/: BUILD  Makefile
src/cli/: __init__.py  main.py  requirements.txt
src/cli/commands/: __init__.py  base.py  config_commands.py  declarative.py  discovery_commands.py  disk_commands.py  exit_command.py  help_command.py  server_commands.py  system_commands.py  variable_commands.py
src/cli/config/: __init__.py
src/cli/discovery/: __init__.py  base.py  coordinator.py  disk_space.py  mount_points.py
src/cli/engine/: parser.py  statements.py
src/cli/shell/: __init__.py  command_context.py  command_handler.py  completer.py  exceptions.py  pipeline.py  shell.py  update_info.py  update_info_node.py  variable_manager.py  view_manager.py
src/cli/targeting/: __init__.py  config_models.py  config_store.py
src/cli/utils/: __init__.py  type_converter.py
src/cli/views/: __init__.py  base_view.py  editor_view.py  simple_view.py  view_registry.py
src/hotswap/: BUILD  Makefile  main.py
src/logger/: BUILD  LoggerApp.cpp  LoggerApp.hpp  Makefile  ThreadLogger.cpp  ThreadLogger.hpp  main.cpp  threaded_logger.c
tests/: conftest.py
tests/cli/: test_main.py
tests/cli/commands/: test_base.py  test_declarative.py  test_exit_command.py  test_exit_command_integration.py  test_update_info.py  test_variable_command_integration.py  (+1 more)
(+15 files in other folders)
