module(
    name = "logfile_hotswap",
    version = "0.1",
)

# bazel_dep(name = "bazel_skylib", version = "1.7.1")
# bazel_dep(name = "rules_java", version = "7.12.5")
# bazel_dep(name = "rules_python", version = "1.3.0")
# bazel_dep(name = "rules_cc", version = "0.1.1")

# # Initialize Python toolchain
# python = use_extension("@rules_python//python/extensions:python.bzl", "python")
# python.toolchain(
#     name = "python3",
#     python_version = "3",
# )
# use_repo(python, "python3_toolchain")